// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddUser: Component should render correctly 1`] = `
<styled.div>
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Add Users"
        id="project.addUser.headerSubtitle"
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Users"
        id="project.addUser.headerTitle"
      />
    }
  />
  <MobileMenu
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Add Users"
        id="project.addUser.headerSubtitle"
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Users"
        id="project.addUser.headerTitle"
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersPageNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
          />,
          "to": "/user/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectDetailsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project details"
            id="project.view.projectDetails"
          />,
          "to": "/project/1",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "dataSourceNavBtn",
          "label": <FormattedMessage
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
          />,
          "to": "/project/1/datasource",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project Users"
            id="project.view.projectUsersPage"
          />,
          "to": "/project/1/user",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "contentNavBtn",
          "label": <FormattedMessage
            defaultMessage="Content"
            id="project.view.content"
          />,
          "to": "/project/1/content",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "templatesNavBtn",
          "label": <FormattedMessage
            defaultMessage="Templates"
            id="project.view.templates"
          />,
          "to": "/project/1/templates",
          "type": "link_item",
        },
      ]
    }
  />
  <LoadingWrapper
    error={null}
    loading={true}
    noData={true}
    noDataContent={
      <FormattedMessage
        defaultMessage="No users with role Editor available"
        id="project.addUser.noData"
      />
    }
  />
  <NavigationContainer
    contentStyles={null}
    fixed={true}
    hideOnDesktop={false}
    right={false}
  >
    <BackButton
      disabled={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Back"
        id="project.addUser.back"
      />
    </BackButton>
  </NavigationContainer>
</styled.div>
`;

exports[`AddUser: Component should render correctly with users 1`] = `
<styled.div>
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Add Users"
        id="project.addUser.headerSubtitle"
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Users"
        id="project.addUser.headerTitle"
      />
    }
  />
  <MobileMenu
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Add Users"
        id="project.addUser.headerSubtitle"
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Users"
        id="project.addUser.headerTitle"
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersPageNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
          />,
          "to": "/user/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectDetailsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project details"
            id="project.view.projectDetails"
          />,
          "to": "/project/1",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "dataSourceNavBtn",
          "label": <FormattedMessage
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
          />,
          "to": "/project/1/datasource",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project Users"
            id="project.view.projectUsersPage"
          />,
          "to": "/project/1/user",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "contentNavBtn",
          "label": <FormattedMessage
            defaultMessage="Content"
            id="project.view.content"
          />,
          "to": "/project/1/content",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "templatesNavBtn",
          "label": <FormattedMessage
            defaultMessage="Templates"
            id="project.view.templates"
          />,
          "to": "/project/1/templates",
          "type": "link_item",
        },
      ]
    }
  />
  <LoadingWrapper
    error={null}
    loading={true}
    noData={false}
    noDataContent={
      <FormattedMessage
        defaultMessage="No users with role Editor available"
        id="project.addUser.noData"
      />
    }
  >
    <styled.div
      key="0"
    >
      <styled.div>
        <styled.div>
          Dale Chihuly
        </styled.div>
        <styled.div>
          loremipsumdolorsitametconsecteturadipiscinglitdonecobortis@nisitnullalobortisiaculis.com
        </styled.div>
      </styled.div>
      <styled.div>
        <Styled(Component)
          customStyles={
            Object {
              "height": 42,
              "minHeight": 42,
              "width": 42,
            }
          }
          id="addUserPlusButton0"
          onClick={[Function]}
        >
          <Component
            customStyles={
              Object {
                "height": 42,
                "width": 42,
              }
            }
          />
        </Styled(Component)>
      </styled.div>
    </styled.div>
    <styled.div
      key="1"
    >
      <styled.div>
        <styled.div>
          Dave Bowie
        </styled.div>
        <styled.div />
      </styled.div>
      <styled.div>
        <Styled(Component)
          customStyles={
            Object {
              "height": 42,
              "minHeight": 42,
              "width": 42,
            }
          }
          id="addUserPlusButton1"
          onClick={[Function]}
        >
          <Component
            customStyles={
              Object {
                "height": 42,
                "width": 42,
              }
            }
          />
        </Styled(Component)>
      </styled.div>
    </styled.div>
    <styled.div
      key="2"
    >
      <styled.div>
        <styled.div>
          Pellentesque a massa at purus cursus egestas. Aliquam ut vehicula. Praesent est erat, laoreet et ornare ullamcorper, finibus id nisl. Etiam tempor, ligula a sagittis
        </styled.div>
        <styled.div>
          loremipsumdolorsitametconsecteturadipiscinglitdonecobortis@nisitnullalobortisiaculis.com
        </styled.div>
      </styled.div>
      <styled.div>
        <Styled(Component)
          customStyles={
            Object {
              "height": 42,
              "minHeight": 42,
              "width": 42,
            }
          }
          id="addUserPlusButton2"
          onClick={[Function]}
        >
          <Component
            customStyles={
              Object {
                "height": 42,
                "width": 42,
              }
            }
          />
        </Styled(Component)>
      </styled.div>
    </styled.div>
  </LoadingWrapper>
  <NavigationContainer
    contentStyles={null}
    fixed={true}
    hideOnDesktop={false}
    right={false}
  >
    <BackButton
      disabled={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Back"
        id="project.addUser.back"
      />
    </BackButton>
  </NavigationContainer>
</styled.div>
`;
